[gd_scene load_steps=12 format=3 uid="uid://cxy7w1xmp0p8h"]

[ext_resource type="Script" path="res://scenes/Shops/TextileServices.gd" id="1_jj01b"]
[ext_resource type="JSON" path="res://assets/json/TextileServices.json" id="2_yccmp"]
[ext_resource type="PackedScene" uid="uid://ck17xbn21yrd0" path="res://prefabs/Dialogue/DialoguePlayer/DialoguePlayer.tscn" id="2_yk6me"]
[ext_resource type="JSON" path="res://dialogue/Shopkeepers/Noah.json" id="3_irec3"]
[ext_resource type="Texture2D" uid="uid://b6auehuww04m8" path="res://assets/background/quingsterybgs_textileservices.png" id="4_icu58"]
[ext_resource type="Texture2D" uid="uid://dj5eim1jerc8f" path="res://assets/character/talksprites/quingesterynpc_noah_flats.png" id="5_vbwwq"]
[ext_resource type="PackedScene" uid="uid://desvgeqvimub7" path="res://prefabs/Dialogue/DialogueBox/ShopBox.tscn" id="6_fmhen"]
[ext_resource type="PackedScene" uid="uid://cm06xatxch52d" path="res://prefabs/UI/ItemMenu/BuyMenu.tscn" id="7_l6wvs"]
[ext_resource type="PackedScene" uid="uid://bw7q1cc3tci2i" path="res://prefabs/UI/NavButtons/NavButtons.tscn" id="8_hsie8"]
[ext_resource type="PackedScene" uid="uid://dom8vrn6qhhpc" path="res://prefabs/UI/StatusInfo/WeatherHUD.tscn" id="9_ppehg"]
[ext_resource type="PackedScene" uid="uid://by3os4pcokgew" path="res://prefabs/WeatherFX/WeatherFilter.tscn" id="10_nbvwr"]

[node name="TextileServices" type="Node2D"]
script = ExtResource("1_jj01b")
shop_json = ExtResource("2_yccmp")

[node name="DialoguePlayer" parent="." instance=ExtResource("2_yk6me")]
dialogue_file = ExtResource("3_irec3")

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("4_icu58")
centered = false

[node name="WeatherFilter" parent="." node_paths=PackedStringArray("Background") instance=ExtResource("10_nbvwr")]
Background = NodePath("../Background")

[node name="ShopBox" parent="." instance=ExtResource("6_fmhen")]

[node name="Character" parent="ShopBox/Control" index="0"]
texture = ExtResource("5_vbwwq")

[node name="BuyMenu" parent="." node_paths=PackedStringArray("shop_node") instance=ExtResource("7_l6wvs")]
visible = false
z_index = 1
offset_right = 960.0
offset_bottom = 540.0
shop_node = NodePath("..")

[node name="NavButtons" parent="." instance=ExtResource("8_hsie8")]
z_index = 1
offset_right = 960.0
offset_bottom = 540.0

[node name="Button2" parent="NavButtons/NavList" index="1"]
visible = false

[node name="Button3" parent="NavButtons/NavList" index="2"]
visible = false

[node name="WeatherHUD" parent="." instance=ExtResource("9_ppehg")]

[connection signal="pressed" from="NavButtons/NavList/Button1" to="." method="_on_buy_pressed"]
[connection signal="pressed" from="NavButtons/NavList/Button4" to="." method="_on_leave_pressed"]

[editable path="ShopBox"]
[editable path="NavButtons"]
